[package]
name = "ros"
version = "0.1.0"
authors = ["iwannatto <iwannatto@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]
test-success-exit-code = 33  # (0x10 << 1) | 1

[dependencies]
bootloader = "0.6.4"
pc-keyboard = "0.3.1"
pic8259_simple = "0.1.1"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.7.5"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]

[profile.release]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
